minimal viable product achieved

--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -26,7 +26,7 @@
     <div class="navigationbar">
         <img class="navlogo" src="../images/sanctuarydigital long.png" height="80px">
         <div class="dropdown nav-right">
-            <button onclick="navDropdown()" class="dropbtn">Menu</button>
+            <button onclick="navDropdown()" class="dropbtn">menu</button>
             <div id="myDropdown" class="dropdown-content">
                 <!--menu links-->
                 <a href="../index.html">Home</a>
@@ -43,7 +43,7 @@
         <div class="hero-image">
             <div class="hero-text">
 
-                <h1>Portfolio</h1>
+                <h1 class="hero-title">Portfolio</h1>
 
             </div>
         </div>
@@ -94,26 +94,21 @@
             </div>
 
             <div class="card portfolio-card">
-                <img src="../images/sanctuarydigital stacked.png">
+                <img src="../images/sanctuarydigital long.png" alt="sanctuary digital logo">
                 <h1>Sanctuary Digital</h1>
-                <p> It goes without saying that this website is also part of my portfolio. Coded entirely, I hope that
-                    it
-                    showcases my skills as a front-end web developer.</p>
+                <p> It goes without saying that this website is also part of my portfolio. It has been released at mimimum viable product stage and therefore will be a work in progress.</p>
 
             </div>
 
             <div class="card portfolio-card">
+                <img src="../images/sanctuarydigital long.png" alt="sanctuary digital logo">
                 <h1>Coming Soon</h1>
                 <p>I am currently working on my next client's website design and will update with a much better
                     description
                     once completed! </p>
 
             </div>
-            <div class="card portfolio-card">
-                <h1>Learning Journey</h1>
-                <p>If you'd really like, you can have a look at what I did when I was learning via my Github account.The link is <a href="www.github.com/thebeccycode" alt="link to my github">here</a>.</p>
-
-            </div>
+            
 
     </main>
 
