--- a/assets/services.html
+++ b/assets/services.html
@@ -26,7 +26,7 @@
     <div class="navigationbar">
         <img class="navlogo" src="../images/sanctuarydigital long.png" height="80px">
         <div class="dropdown nav-right">
-            <button onclick="navDropdown()" class="dropbtn">Menu</button>
+            <button onclick="navDropdown()" class="dropbtn">menu</button>
             <div id="myDropdown" class="dropdown-content">
                 <!--menu links-->
                 <a href="../index.html">Home</a>
@@ -44,7 +44,7 @@
         <div class="hero-image">
             <div class="hero-text">
 
-                <h1>Services</h1>
+                <h1 class="hero-title">Services</h1>
 
             </div>
         </div>
@@ -67,7 +67,6 @@
         </div>
         <div class="vl"></div>
         <div class="services-container">
-            <h3><strong>Services</strong></h3>
 
             <p>Our business offers digital services from website building to running your social media business pages.
                 Below are the services and the prices you can expect to pay for them:</p>
