--- a/assets/contact.html
+++ b/assets/contact.html
@@ -26,7 +26,7 @@
     <div class="navigationbar">
         <img class="navlogo" src="../images/sanctuarydigital long.png" height="80px">
         <div class="dropdown nav-right">
-            <button onclick="navDropdown()" class="dropbtn">Menu</button>
+            <button onclick="navDropdown()" class="dropbtn">menu</button>
             <div id="myDropdown" class="dropdown-content">
                 <!--menu links-->
                 <a href="../index.html">Home</a>
@@ -43,7 +43,7 @@
         <div class="hero-image">
             <div class="hero-text">
 
-                <h1>Contact Us</h1>
+                <h1 class="hero-title">Contact Us</h1>
 
             </div>
         </div>
