created colour palette changes, added in improved logos and checked spellings, did some reworking of css

--- a/assets/contact.html
+++ b/assets/contact.html
@@ -24,7 +24,7 @@
 
     <!--navigation bar/component 1-->
     <div class="navigationbar">
-        <img class="navlogo" src="../images/sanctuarydigital long.png" height="80px">
+        <img class="navlogo" src="../images/Sanctuary Digital EXPANDED/3.png" >
         <div class="dropdown nav-right">
             <button onclick="navDropdown()" class="dropbtn">menu</button>
             <div id="myDropdown" class="dropdown-content">
@@ -126,15 +126,15 @@
     <footer>
         <div class="footer-container">
             <div class="image-container">
-                <img src="../images/sanctuarydigital stacked.png" alt="Sanctuary Logo">
+                <img src="../images/Sanctuary Digital EXPANDED/3.png" alt="Sanctuary Logo">
             </div>
-            <p class="thankyou">Thank you for visiting Sanctuary Web Digital.</p>
+            <p class="thankyou">Thank you for visiting Sanctuary Digital.</p>
 
             <a href="mailto:<nowiki> info@sanctuary-digital.com?" subject="HTML link"> email</a> <p>info@sanctuary-digital.com</p>
             <a href="tel:07462861387"> call us</a><p>07462861387</p>
 
             <p class="copyright">
-                &copy; 2023 Sanctuary Digital. All rights reserved.
+                &copy; 2023 Sanctuary Digital.
             </p>
         </div>
 
