--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -24,7 +24,7 @@
     <!--navigation bar/component 1-->
     <!--navigation bar/component 1-->
     <div class="navigationbar">
-        <img class="navlogo" src="../images/sanctuarydigital long.png" height="80px">
+        <img class="navlogo" src="../images/Sanctuary Digital EXPANDED/3.png">
         <div class="dropdown nav-right">
             <button onclick="navDropdown()" class="dropbtn">menu</button>
             <div id="myDropdown" class="dropdown-content">
@@ -94,14 +94,14 @@
             </div>
 
             <div class="card portfolio-card">
-                <img src="../images/sanctuarydigital long.png" alt="sanctuary digital logo">
+                <img src="../images/Sanctuary Digital EXPANDED/4.png" alt="sanctuary digital logo">
                 <h1>Sanctuary Digital</h1>
                 <p> It goes without saying that this website is also part of my portfolio. It has been released at mimimum viable product stage and therefore will be a work in progress.</p>
 
             </div>
 
             <div class="card portfolio-card">
-                <img src="../images/sanctuarydigital long.png" alt="sanctuary digital logo">
+                <img src="../images/Sanctuary Digital EXPANDED/4.png" alt="sanctuary digital logo">
                 <h1>Coming Soon</h1>
                 <p>I am currently working on my next client's website design and will update with a much better
                     description
@@ -115,15 +115,15 @@
     <footer>
         <div class="footer-container">
             <div class="image-container">
-                <img src="../images/sanctuarydigital stacked.png" alt="Sanctuary Logo">
+                <img src="../images/Sanctuary Digital EXPANDED/3.png" alt="Sanctuary Logo">
             </div>
-            <p class="thankyou">Thank you for visiting Sanctuary Web Digital.</p>
+            <p class="thankyou">Thank you for visiting Sanctuary Digital.</p>
 
-            <a href="mailto:<nowiki> info@sanctuary-digital.com?" subject="HTML link"> email</a> <p>info@sanctuary-digital.com</p>
-            <a href="tel:07462861387"> call us</a><p>07462861387</p>
+            <a href="mailto:<nowiki> info@sanctuary-digital.com?" subject="HTML link"> e m a i l</a> <p>info@sanctuary-digital.com</p>
+            <a href="tel:07462861387"> c a l l</a><p>07462861387</p>
 
             <p class="copyright">
-                &copy; 2023 Sanctuary Digital. All rights reserved.
+                &copy; 2023 Sanctuary Digital  
             </p>
         </div>
 
