--- a/assets/services.html
+++ b/assets/services.html
@@ -24,7 +24,7 @@
     <!--navigation bar/component 1-->
 
     <div class="navigationbar">
-        <img class="navlogo" src="../images/sanctuarydigital long.png" height="80px">
+        <img class="navlogo" src="../images/Sanctuary Digital EXPANDED/3.png">
         <div class="dropdown nav-right">
             <button onclick="navDropdown()" class="dropbtn">menu</button>
             <div id="myDropdown" class="dropdown-content">
@@ -68,8 +68,9 @@
         <div class="vl"></div>
         <div class="services-container">
 
-            <p>Our business offers digital services from website building to running your social media business pages.
-                Below are the services and the prices you can expect to pay for them:</p>
+            <p>
+                <em>Sanctuary Digital offers a range of services to help get your business online. Below are your basic rates for all the services we currently offer. However, we can make accomodations so request them if you have an inquiry.</em>
+                </p>
             <br>
 
             <h3>Logo Design</h3>
@@ -121,7 +122,7 @@
     <footer>
         <div class="footer-container">
             <div class="image-container">
-                <img src="../images/sanctuarydigital stacked.png" alt="Sanctuary Logo">
+                <img src="../images/Sanctuary Digital EXPANDED/3.png" alt="Sanctuary Logo">
             </div>
             <p class="thankyou">Thank you for visiting Sanctuary Web Digital.</p>
 
